# mhtml

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: extract.rs  lib.rs  list.rs  main.rs  naming.rs  resolve.rs
crates/cli/tests/: extract.rs  list.rs
crates/cli/tests/fixtures/: lib.ru.koi8r.mhtml  simple.mhtml  truncated.mhtml
crates/parser/: Cargo.toml
crates/parser/fuzz/: Cargo.toml
crates/parser/fuzz/fuzz_targets/: parse.rs
crates/parser/src/: headers.rs  lib.rs  parts.rs  qp.rs  scanner.rs
crates/parser/tests/: api.rs  golden.rs
crates/serve/: Cargo.toml
crates/serve/src/: bundle.rs  ctype.rs  entry.rs  lib.rs  locate.rs  mime.rs  naming.rs  rewrite_css.rs  rewrite_html.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: naming-strategy.md
examples/node-server/: server.js  smoke.js
examples/s3-demo/: Makefile  README.md  hash-extract.js  server.js
tools/conservation/: README.md  package-lock.json  package.json  sites.json
tools/conservation/lib/: capture.js  compare.js  extract.js  render.js  report.js  signals.js  wasmparity.js
tools/conservation/run/: capture.js  verify-hash.js  verify.js
