[package]
name = "mhtml-serve"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Consumption layer over the `mhtml` parser: reconstruct an archive, resolve MIME types, and rewrite/serve its resources (content-hash naming for S3)."
keywords = ["mhtml", "web-archive", "extract", "rewrite", "s3"]
categories = ["web-programming", "parser-implementations"]

[dependencies]
mhtml = { path = "../parser", version = "0.1.0" }
url = "2"
lol_html = "3"
encoding_rs = "0.8"
percent-encoding = "2"
sha2 = "0.10"
